# PerlerBeadsCraft

./: .gitignore  README.md  main.py  pyproject.toml
output/: cyrene_beads.csv
perlerbeadscraft/: __init__.py  _mard_data.py  cli.py  color.py  palettes.py  pattern.py  render.py
